# expense-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
expense_tracker/: __init__.py  backup.py  categorizer.py  cli.py  crypto.py  exporter.py  gmail_enricher.py  models.py  reports.py  storage.py
expense_tracker/bot/: __init__.py  config.py  keyboards.py  main.py  states.py
expense_tracker/bot/handlers/: __init__.py  categories.py  export.py  import_pdf.py  reports.py  settings.py  start.py
expense_tracker/parsers/: __init__.py  alfabank.py  base.py  ozon.py  tbank.py  yandex.py
scripts/: ozon_cheque_downloader.js  ozon_cheque_processor.py
tests/: __init__.py  test_tbank_parser.py
